# terminal-minesweeper

./: .gitignore  Dockerfile  Dockerfile.server  LICENSE  README.md  __main__.py  board.py  config.py  debug.py  dockershell.py  index.html  main.py  mineshell.py  pyproject.toml  setup.py  ui.py  utils.py
assets/: prism.css  prism.js
minesweeper/: __main__.py  board.py  box.py  config.py  debug.py  main.py  minesweeper  ui.py
